# gnome-vala-template

./: .editorconfig  LICENSE  README.md  com.nahuelwexd.GnomeValaTemplate.Devel.yml  meson.build  meson_options.txt
.github/workflows/: flatpak.yml
data/: com.nahuelwexd.GnomeValaTemplate.desktop.in.in  com.nahuelwexd.GnomeValaTemplate.gschema.xml.in  com.nahuelwexd.GnomeValaTemplate.metainfo.xml.in.in  meson.build
data/icons/: meson.build
po/: POTFILES  gnome-vala-template.pot
src/: Application.vala  MainWindow.ui  MainWindow.vala  Shortcuts.ui  gnome-vala-template-ui-resources.xml  meson.build
vapi/: config.vapi
